--- a/web/Client/src/components/styles/nav.css
+++ b/web/Client/src/components/styles/nav.css
@@ -6,6 +6,7 @@ nav{
     justify-content: center;
     align-items: center;
     backdrop-filter: blur(10px);
+    z-index: 1000;
 }
 
 nav ul li a{
