--- a/web/Client/src/styles/admin.css
+++ b/web/Client/src/styles/admin.css
@@ -146,7 +146,6 @@
 }
 
 .component-window {
-  /* background: white; */
   border-radius: 8px;
   border: 3px solid #00ff6e1a;
   box-shadow: 0 0 20px rgba(0,0,0,0.2);
@@ -196,7 +195,7 @@
   box-sizing: border-box;
   cursor: se-resize;
   z-index: 1003;
-  background-color: #00ff6e1a;
+  background-color: #58ffa11a;
 }
 
 .mobile-windows-container {
@@ -219,6 +218,13 @@
   flex-direction: column;
   overflow: hidden;
   background-color: #13df6b;
+  height: 90vh;
+  width: 100%;
+  max-width: 100%;
+  margin: 0 auto;
+  box-sizing: border-box;
+  min-height: 0; /* Allow children to shrink below parent height */
+  flex: 1 1 auto; /* Allow container to grow/shrink while maintaining aspect ratio */
 }
 
 .mobile-header {
